# lab-notebook-intelligence

./: .copier-answers.yml  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  compass.yml  install.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: build.yml  check-release.yml  format.yml  upload-s3-production.yml  upload-s3-staging.yml
jupyter-config/server-config/: jupyter_notebook_intelligence.json  notebook_intelligence.json
jupyter_notebook_intelligence/: __init__.py  agents.py  config.py  extension.py  extension_manager.py  github_copilot.py  github_copilot_prompts.py  handlers.py  test_extension.py
lab_notebook_intelligence/: __init__.py  ai_service_manager.py  api.py  base_chat_participant.py  built_in_toolsets.py  config.py  extension.py  github_copilot.py  github_copilot_chat_participant.py  mcp_manager.py  prompts.py  util.py
lab_notebook_intelligence/llm_providers/: github_copilot_llm_provider.py  litellm_compatible_llm_provider.py  ollama_llm_provider.py  openai_compatible_llm_provider.py
notebook_intelligence/: __init__.py  ai_service_manager.py  api.py  base_chat_participant.py  built_in_toolsets.py  config.py  extension.py  extension_manager.py  github_ai_model.py  github_copilot.py  github_copilot_chat_participant.py  github_copilot_llm_provider.py  github_copilot_participant.py  github_copilot_prompts.py  handlers.py  mcp_manager.py  prompts.py  test_extension.py  util.py
notebook_intelligence/llm_providers/: github_copilot_llm_provider.py  litellm_compatible_llm_provider.py  ollama_llm_provider.py  openai_compatible_llm_provider.py
schema/: plugin.json
src/: api.ts  chat-sidebar.tsx  context.tsx  github-copilot.ts  handler.ts  index.ts  markdown-renderer.tsx  svg.d.ts  tokens.ts  utils.ts
style/: base.css
